--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "redux-saga": "^1.0.2",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.86.0",
-    "styled-components": "^4.2.0"
+    "styled-components": "^4.2.0",
+    "superagent": "^5.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
